Adds logo and arrows, updates css

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,15 +8,12 @@ body {
 }
 
 nav {
-	height: 100px;
+	height: 120px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-}
-
-.navbar-image {
-	width: 200px;
+	padding-left: 110px;
 }
 
 .favorites {
@@ -61,14 +58,18 @@ nav {
 	color: white;
 	padding: 10px 12px;
 	margin-left: 20px;
+	cursor: pointer;
+}
+.searchbar-btn button:hover {
+	background-color: gray;
 }
 
 .header {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
-	padding: 20px;
+	padding: 10px;
 }
 
 .pokedex-grid {
@@ -173,21 +174,13 @@ nav {
 }
 
 .pagination-btn {
-	background-color: black;
 	border: none;
-	border-radius: 50%;
-	width: 32px;
-	height: 32px;
-	margin: 0px 8px;
+	margin: 0px 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
-}
-
-.icon {
-	width: 28px;
-	height: 28px;
+	background-color: Transparent;
 }
 
 .lds-ring {
@@ -196,6 +189,7 @@ nav {
 	width: 120px;
 	height: 120px;
 }
+
 .lds-ring div {
 	box-sizing: border-box;
 	display: block;
