--- a/src/styles.css
+++ b/src/styles.css
@@ -381,3 +381,24 @@ nav {
 	border: 2px solid #30251f;
 	color: #30251f;
 }
+
+.footer {
+	padding: 10px 0 10px 0;
+	text-align: center;
+	width: 100%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+}
+
+.footer p {
+	margin: 10px;
+}
+
+.githubIcon {
+	color: #000000;
+	font-size: 25px;
+	padding: 0 0 0 5px;
+}
