--- a/src/styles.css
+++ b/src/styles.css
@@ -82,10 +82,26 @@ nav {
 .header {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	padding: 10px;
 	font-size: 20px;
+}
+
+.filter-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-right: auto;
+}
+
+.filter-container p {
+	font-size: 16px;
+}
+
+.selectType-box {
+	display: flex;
+	width: 120px;
 }
 
 .pokedex-grid {
