--- a/src/styles.css
+++ b/src/styles.css
@@ -92,16 +92,17 @@ nav {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-right: auto;
+	margin: 10px 0 10px 0;
 }
 
 .filter-container p {
-	font-size: 16px;
+	font-size: 18px;
 }
 
 .selectType-box {
 	display: flex;
 	width: 120px;
+	font-size: 16px;
 }
 
 .pokedex-grid {
