--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color: #e6e6e6;
+	background-color: #d6d6d6;
 }
 
 nav {
@@ -158,7 +158,7 @@ nav {
 	border-radius: 12px;
 	background-color: #ffffff;
 	transition: all 0.2s ease-in-out;
-	height: 110px;
+	min-height: 110px;
 }
 
 .pokemon-card:hover {
@@ -424,7 +424,7 @@ nav {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.702);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -443,12 +443,14 @@ nav {
 }
 
 .modal {
+	display: flex;
+	flex-direction: column;
 	position: relative;
-	width: 800px;
-	height: 600px;
-	background-color: white;
-	border-radius: 12px;
+	min-width: 750px;
+	min-height: 550px;
+	background-color: #d6d6d6;
 	transition: all 0.3s ease-in-out;
+	border-radius: 12px;
 }
 
 .modal.open {
@@ -459,67 +461,88 @@ nav {
 	opacity: 0;
 }
 
-.modal-container {
+.modal-top {
 	display: flex;
 	flex-direction: row;
-	height: 100%;
-}
-
-.modal-content-main {
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: space-evenly;
-	padding: 30px;
-}
-
-.modal-main-top {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-}
-
-.modal-main-top h1 {
-	padding-bottom: 40px;
-	font-size: 40px;
-}
-
-.pokemon-name-modal {
+	justify-content: space-between;
+	align-items: center;
+	background-color: #ffffff;
+	height: 50px;
+	border-radius: 12px 12px 0 0;
 	text-transform: capitalize;
-}
-
-.pokemon-img-modal {
-	width: 300px;
-	height: 300px;
-}
-
-.pokemon-img-modal img {
-	width: 100%;
-	height: 100%;
-}
-
-.modal-content-details {
-	width: 50%;
-	padding: 30px;
-	text-transform: capitalize;
-}
-
-.modal-content-details h1 {
-	text-decoration: underline;
-	padding-bottom: 10px;
-}
-
-.base-stats div {
+	padding: 4px;
 	font-size: 20px;
+}
+
+.modal-pokemon-id {
+	padding-left: 10px;
 }
 
 .modal-close-button {
-	position: absolute;
-	right: 10px;
-	top: 0px;
-	font-size: 20px;
+	padding-right: 10px;
+	font-size: 30px;
+}
+
+.modal-img-container {
+	display: flex;
+	justify-content: center;
+	padding: 20px 0 20px 0;
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.modal-img {
+	background-color: #ffffff;
+	padding: 5%;
+	border-radius: 50%;
+}
+
+.modal-img img {
+	width: 300px;
+	height: 300px;
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.modal-bottom {
+	display: flex;
+	flex-direction: row;
+	padding-bottom: 30px;
+	background-color: #ffffff;
+	border-radius: 0 0 12px 12px;
+}
+
+.modal-left-column {
+	padding: 4px 8px 0 30px;
+	width: 50%;
+	text-transform: capitalize;
+}
+
+.modal-left-column h1 {
+	font-size: 28px;
+	padding-bottom: 5px;
+	font-weight: 500;
+}
+
+.modal-left-column div {
+	font-size: 18px;
+	padding-bottom: 3px;
+}
+
+.modal-right-column {
+	padding: 4px 8px 0 30px;
+	width: 50%;
+	text-transform: capitalize;
+}
+
+.modal-right-column h1 {
+	font-size: 28px;
+	padding-bottom: 5px;
+	font-weight: 500;
+}
+
+.modal-right-column div {
+	font-size: 18px;
 }
 
 .closeIcon:hover {
