--- a/src/styles.css
+++ b/src/styles.css
@@ -158,7 +158,7 @@ nav {
 	border-radius: 12px;
 	background-color: #ffffff;
 	transition: all 0.2s ease-in-out;
-	min-height: 110px;
+	height: 110px;
 }
 
 .pokemon-card:hover {
@@ -187,6 +187,7 @@ nav {
 
 .pokemon-id {
 	font-size: 24px;
+	padding-left: 10px;
 }
 
 .card-bottom {
@@ -316,8 +317,8 @@ nav {
 }
 
 .pokemon-type img {
-	height: 50px;
-	width: 50px;
+	height: 75%;
+	width: 75%;
 }
 
 #type-box {
@@ -442,23 +443,23 @@ nav {
 	pointer-events: none;
 }
 
-.modal {
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	min-width: 750px;
-	min-height: 550px;
-	background-color: #d6d6d6;
-	transition: all 0.3s ease-in-out;
-	border-radius: 12px;
-}
-
 .modal.open {
 	opacity: 1;
 }
 
 .modal.closed {
 	opacity: 0;
+}
+
+.modal {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	min-width: 50%;
+	min-height: 50%;
+	background-color: #d6d6d6;
+	transition: all 0.3s ease-in-out;
+	border-radius: 12px;
 }
 
 .modal-top {
@@ -471,37 +472,36 @@ nav {
 	border-radius: 12px 12px 0 0;
 	text-transform: capitalize;
 	padding: 4px;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 .modal-pokemon-id {
-	padding-left: 10px;
+	padding: 0 40px 0 10px;
 }
 
 .modal-close-button {
-	padding-right: 10px;
+	padding: 0 10px 0 40px;
 	font-size: 30px;
 }
 
 .modal-img-container {
+	padding: 10px 0 10px 0;
 	display: flex;
 	justify-content: center;
-	padding: 20px 0 20px 0;
-	min-width: 100%;
-	min-height: 100%;
+	align-items: center;
 }
 
 .modal-img {
 	background-color: #ffffff;
-	padding: 5%;
+	width: 300px;
+	height: 300px;
 	border-radius: 50%;
+	padding: 5%;
 }
 
 .modal-img img {
 	width: 300px;
 	height: 300px;
-	min-width: 100%;
-	min-height: 100%;
 }
 
 .modal-bottom {
@@ -512,21 +512,22 @@ nav {
 	border-radius: 0 0 12px 12px;
 }
 
-.modal-left-column {
-	padding: 4px 8px 0 30px;
-	width: 50%;
-	text-transform: capitalize;
-}
-
-.modal-left-column h1 {
+.modal-bottom h1 {
 	font-size: 28px;
 	padding-bottom: 5px;
 	font-weight: 500;
 }
 
-.modal-left-column div {
+.modal-bottom div {
 	font-size: 18px;
 	padding-bottom: 3px;
+}
+
+.modal-left-column {
+	padding-top: 4px;
+	padding-left: 15px;
+	width: 60%;
+	text-transform: capitalize;
 }
 
 .modal-right-column {
@@ -535,14 +536,176 @@ nav {
 	text-transform: capitalize;
 }
 
-.modal-right-column h1 {
-	font-size: 28px;
-	padding-bottom: 5px;
-	font-weight: 500;
+@media only screen and (max-width: 768px) {
+	.modal {
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		min-width: 50%;
+		min-height: 50%;
+		background-color: #d6d6d6;
+		transition: all 0.3s ease-in-out;
+		border-radius: 12px;
+	}
+
+	.modal-top {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		background-color: #ffffff;
+		height: 50px;
+		border-radius: 12px 12px 0 0;
+		text-transform: capitalize;
+		padding: 4px;
+		font-size: 16px;
+	}
+
+	.modal-pokemon-id {
+		padding: 0 40px 0 10px;
+	}
+
+	.modal-close-button {
+		padding: 0 10px 0 40px;
+		font-size: 30px;
+	}
+
+	.modal-img-container {
+		padding: 10px 0 10px 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.modal-img {
+		background-color: #ffffff;
+		width: 300px;
+		height: 300px;
+		border-radius: 50%;
+		padding: 5%;
+	}
+
+	.modal-img img {
+		width: 300px;
+		height: 300px;
+	}
+
+	.modal-bottom {
+		display: flex;
+		flex-direction: row;
+		padding-bottom: 30px;
+		background-color: #ffffff;
+		border-radius: 0 0 12px 12px;
+	}
+
+	.modal-bottom h1 {
+		font-size: 28px;
+		padding-bottom: 5px;
+		font-weight: 500;
+	}
+
+	.modal-bottom div {
+		font-size: 18px;
+		padding-bottom: 3px;
+	}
+
+	.modal-left-column {
+		padding-top: 4px;
+		padding-left: 15px;
+		width: 60%;
+		text-transform: capitalize;
+	}
+
+	.modal-right-column {
+		padding: 4px 8px 0 30px;
+		width: 50%;
+		text-transform: capitalize;
+	}
 }
 
-.modal-right-column div {
-	font-size: 18px;
+@media only screen and (max-width: 600px) {
+	.modal {
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		background-color: #d6d6d6;
+		transition: all 0.3s ease-in-out;
+		border-radius: 0;
+		text-transform: capitalize;
+	}
+
+	.modal-top {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		background-color: #ffffff;
+		height: 50px;
+		text-transform: capitalize;
+		padding: 4px;
+		font-size: 12px;
+		border-radius: 0;
+	}
+
+	.modal-pokemon-id {
+		padding-left: 10px;
+	}
+
+	.modal-close-button {
+		padding-right: 10px;
+		font-size: 20px;
+	}
+
+	.modal-img-container {
+		padding: 10px 0 10px 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.modal-img {
+		background-color: #ffffff;
+		width: 200px;
+		height: 200px;
+		border-radius: 50%;
+		padding: 5%;
+	}
+
+	.modal-img img {
+		width: 200px;
+		height: 200px;
+	}
+
+	.modal-bottom {
+		display: flex;
+		flex-direction: row;
+		padding-bottom: 10px;
+		background-color: #ffffff;
+		border-radius: 0;
+		min-height: 100%;
+	}
+
+	.modal-bottom h1 {
+		font-size: 20px;
+		padding-bottom: 2px;
+	}
+
+	.modal-bottom div {
+		font-size: 14px;
+		padding-bottom: 2px;
+	}
+
+	.modal-left-column {
+		padding: 4px 8px 0 10px;
+		width: 50%;
+	}
+
+	.modal-right-column {
+		padding: 4px 8px 0 10px;
+		width: 50%;
+	}
 }
 
 .closeIcon:hover {
