--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Cairo:wght@200;300;400;500;600;700;800;900&family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Dosis:wght@200;300;400;500;600;700;800&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Hind+Madurai:wght@300;400;500;600;700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Manrope:wght@200;300;400;500;600;700;800&family=Maven+Pro:wght@400;500;600;700;800;900&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mukta:wght@200;300;400;500;600;700;800&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Play:wght@400;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Space+Grotesk:wght@300;400;500;600;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 * {
 	margin: 0px;
-	font-family: Poppins;
+	font-family: "Chakra Petch", sans-serif;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 }
 
 nav {
-	height: 120px;
+	height: 140px;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
@@ -20,7 +20,12 @@ nav {
 }
 
 .favorites {
-	font-size: 25px;
+	font-size: 22px;
+}
+
+.logo img {
+	height: 130px;
+	width: 260px;
 }
 
 .favorites,
@@ -128,18 +133,6 @@ nav {
 	padding: 0px 10px 20px 10px;
 }
 
-@media screen and (max-width: 1200px) {
-	.pokedex-grid {
-		grid-template-columns: repeat(2, 1fr);
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.pokedex-grid {
-		grid-template-columns: repeat(1, 1fr);
-	}
-}
-
 .pokemon-card {
 	display: flex;
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
@@ -147,6 +140,7 @@ nav {
 	background-color: #ffffff;
 	transition: all 0.2s ease-in-out;
 	height: 110px;
+	min-width: 320px;
 }
 
 .pokemon-card:hover {
@@ -157,7 +151,6 @@ nav {
 .pokemon-card-img {
 	width: 115px;
 	height: 115px;
-	padding-left: 5px;
 }
 
 .card-top {
@@ -189,7 +182,7 @@ nav {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 10px 20px 30px 10px;
+	padding: 10px 20px 0 10px;
 	flex: 1;
 	text-transform: capitalize;
 }
@@ -318,92 +311,92 @@ nav {
 }
 
 .grass {
-	background: #a7db8d;
+	background: #38be4b;
 	border-radius: 12px;
 }
 
 .water {
-	background: #9db7f5;
+	background: #3692dd;
 	border-radius: 12px;
 }
 
 .fire {
-	background: #f5ac78;
+	background: #ff9740;
 	border-radius: 12px;
 }
 
 .poison {
-	background: #dba2db;
+	background: #b567cd;
 	border-radius: 12px;
 }
 
 .bug {
-	background: #c6d16e;
+	background: #84c300;
 	border-radius: 12px;
 }
 
 .flying {
-	background: #c6b7f5;
+	background: #8aaae3;
 	border-radius: 12px;
 }
 
 .normal {
-	background: #c6c6a7;
+	background: #919aa3;
 	border-radius: 12px;
 }
 
 .electric {
-	background: #fae078;
+	background: #fbd100;
 	border-radius: 12px;
 }
 
 .ground {
-	background: #ebd09d;
+	background: #e87235;
 	border-radius: 12px;
 }
 
 .fairy {
-	background: #f4bdc9;
+	background: #fb89eb;
 	border-radius: 12px;
 }
 
 .fighting {
-	background: #d6817d;
+	background: #df3069;
 	border-radius: 12px;
 }
 
 .ghost {
-	background: #a292bc;
+	background: #4c6ab2;
 	border-radius: 12px;
 }
 
 .psychic {
-	background: #fa92b2;
+	background: #ff6577;
 	border-radius: 12px;
 }
 
 .rock {
-	background: #d1c17d;
+	background: #c8b686;
 	border-radius: 12px;
 }
 
 .steel {
-	background: #d1d1e0;
+	background: #5a8ea3;
 	border-radius: 12px;
 }
 
 .ice {
-	background: #bce6e6;
+	background: #4cd1c0;
 	border-radius: 12px;
 }
 
 .dragon {
-	background: #ad8cfc;
+	background: #006fc9;
 	border-radius: 12px;
 }
 
 .dark {
-	background: #a29288;
+	background: #5b5466;
 	border-radius: 12px;
 }
 
@@ -443,11 +436,12 @@ nav {
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	min-width: 50%;
-	min-height: 50%;
-	background-color: #d6d6d6;
+	background-color: #ffffff;
 	transition: all 0.3s ease-in-out;
 	border-radius: 12px;
+	margin: 20px;
+	max-width: 78%;
+	max-height: 90%;
 }
 
 .modal-top {
@@ -455,12 +449,12 @@ nav {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	background-color: #ffffff;
+	background-color: #d6d6d6;
 	height: 50px;
 	border-radius: 12px 12px 0 0;
 	text-transform: capitalize;
 	padding: 4px;
-	font-size: 20px;
+	font-size: 22px;
 }
 
 .modal-pokemon-id {
@@ -469,21 +463,31 @@ nav {
 
 .modal-close-button {
 	padding: 0 10px 0 40px;
-	font-size: 30px;
+	font-size: 34px;
 }
 
-.modal-center {
-	padding: 10px 40px 10px 40px;
+.modal-bottom {
+	display: flex;
+	flex-direction: row;
+}
+
+.modal-left-column {
+	padding: 0 40px 0 40px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
+	background-color: #d6d6d6;
+	border-radius: 12px;
+	margin: 15px;
+	font-size: 22px;
 }
 
 .modal-pokemon-genus {
 	padding: 0 8px 0 8px;
-	margin-bottom: 10px;
-	font-size: 22px;
+	margin: 10px 0 10px 0;
+	border-radius: 8px;
+	font-weight: 600;
 }
 
 .modal-type-icons {
@@ -505,7 +509,7 @@ nav {
 	width: 300px;
 	height: 300px;
 	border-radius: 50%;
-	padding: 1%;
+	padding: 10%;
 }
 
 .modal-img img {
@@ -513,39 +517,90 @@ nav {
 	height: 300px;
 }
 
-.modal-bottom {
+.weight-and-height {
 	display: flex;
-	flex-direction: row;
-	padding-bottom: 30px;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 10px 0 10px 0;
+	column-gap: 30px;
+	font-weight: 600;
+	text-align: center;
+}
+
+.pokemon-weight {
 	background-color: #ffffff;
-	border-radius: 0 0 12px 12px;
+	padding: 5px;
+	border-radius: 8px;
+	min-width: 160px;
+}
+
+.pokemon-height {
+	background-color: #ffffff;
+	padding: 5px;
+	border-radius: 8px;
+	min-width: 160px;
 }
 
 .modal-bottom h1 {
-	font-size: 28px;
-	padding-bottom: 5px;
-	font-weight: 500;
-}
-
-.modal-bottom div {
-	font-size: 18px;
-	padding-bottom: 3px;
-}
-
-.modal-left-column {
-	padding-top: 4px;
-	padding-left: 30px;
-	width: 60%;
-	text-transform: capitalize;
+	font-size: 34px;
+	font-weight: 600;
 }
 
 .modal-right-column {
-	padding: 4px 8px 0 0;
-	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	border-radius: 0 0 12px 0;
+	margin: 15px;
+}
+
+.modal-right-column div {
+	padding-bottom: 2px;
+	font-size: 22px;
+	font-weight: 500;
+}
+
+.container {
+	background-color: #d6d6d6;
+	border-radius: 12px;
+	padding: 5px 10px 5px 10px;
+	margin-bottom: 20px;
+}
+
+#stat-name {
+	font-weight: 700;
+	text-transform: capitalize;
+}
+
+.modal-stats {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	column-gap: 20px;
+	width: fit-content;
+}
+
+.stats-column {
+	text-transform: capitalize;
+	display: flex;
+	flex-direction: column;
 }
 
 .modal-abilities {
 	text-transform: capitalize;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	grid-gap: 20px;
+	width: fit-content;
+}
+
+.modal-abilities ul {
+	padding-left: 20px;
+}
+
+.modal-flavor-text {
+	width: fit-content;
 }
 
 .closeIcon:hover {
@@ -576,108 +631,324 @@ nav {
 	padding: 0 0 0 5px;
 }
 
-@media only screen and (max-width: 1080px) {
+@media screen and (max-width: 1039px) {
+	.pokedex-grid {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
 	.modal {
-		display: flex;
-		flex-direction: column;
-		position: relative;
-		min-width: 50%;
-		min-height: 50%;
-		background-color: #d6d6d6;
-		transition: all 0.3s ease-in-out;
-		border-radius: 12px;
-		margin: 0 30px 0 30px;
+		min-width: 85%;
+		min-height: 80%;
 	}
 
 	.modal-top {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		background-color: #ffffff;
-		height: 50px;
-		border-radius: 12px 12px 0 0;
-		text-transform: capitalize;
-		padding: 4px;
+		height: 40px;
+		padding: 2px;
 		font-size: 18px;
-	}
-
-	.modal-pokemon-id {
-		padding: 0 40px 0 10px;
 	}
 
 	.modal-close-button {
-		padding: 0 10px 0 40px;
-		font-size: 30px;
-	}
-
-	.modal-pokemon-genus {
-		padding: 0 8px 0 8px;
-		margin-bottom: 10px;
-		font-size: 18px;
-	}
-
-	.modal-img-container {
-		padding: 10px 0 10px 0;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
-	.modal-img {
-		background-color: #ffffff;
-		max-width: 250px;
-		max-height: 250px;
-		border-radius: 50%;
-		padding: 2%;
-	}
-
-	.modal-img img {
-		max-width: 250px;
-		max-height: 250px;
-	}
-
-	.modal-type-icons img {
-		width: 60px;
-		height: 60px;
+		font-size: 28px;
 	}
 
 	.modal-bottom {
-		display: flex;
-		flex-direction: row;
-		background-color: #ffffff;
-		border-radius: 0 0 12px 12px;
+		flex: 1;
+	}
+
+	.modal-left-column {
+		padding: 0 10px 0 10px;
+		font-size: 20px;
+		flex: 1;
+	}
+
+	.modal-type-icons img {
+		width: 80px;
+		height: 80px;
+	}
+
+	.modal-img {
+		width: 250px;
+		height: 250px;
+		padding: 5%;
+	}
+
+	.modal-img img {
+		width: 250px;
+		height: 250px;
+	}
+
+	.weight-and-height {
+		column-gap: 10px;
+	}
+
+	.pokemon-weight {
+		padding: 2px;
+	}
+
+	.pokemon-height {
+		padding: 2px;
 	}
 
 	.modal-bottom h1 {
 		font-size: 28px;
-		padding-bottom: 5px;
-		font-weight: 500;
-	}
-
-	.modal-bottom div {
-		font-size: 18px;
-		padding-bottom: 3px;
-	}
-
-	.modal-left-column {
-		padding-top: 4px;
-		padding-left: 30px;
-		width: 50%;
-		text-transform: capitalize;
 	}
 
 	.modal-right-column {
-		padding: 4px 30px 0 0;
-		width: 50%;
+		margin: 10px;
 	}
 
-	.modal-abilities {
-		text-transform: capitalize;
+	.modal-right-column div {
+		font-size: 20px;
+	}
+
+	.container {
+		padding: 5px;
 	}
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 730px) {
+	nav {
+		height: 90px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		flex-wrap: nowrap;
+		justify-content: center;
+		padding: 15px 0 20px 0;
+	}
+
+	.logo img {
+		width: 180px;
+		height: 90px;
+	}
+
+	.favorites {
+		font-size: 16px;
+	}
+
+	.favorites,
+	.logo,
+	.left-div {
+		display: flex;
+		flex: 0;
+	}
+
+	.favorites,
+	.logo {
+		margin-top: 5px;
+		margin-bottom: 0;
+	}
+
+	.searchbar {
+		padding-right: 0px;
+	}
+
+	.searchbar input {
+		padding: 4px;
+		font-size: 16px;
+	}
+
+	.searchbar-btn button {
+		padding: 4px;
+		margin-left: 15px;
+	}
+
+	.header {
+		padding: 0;
+	}
+
+	.filter-container {
+		margin: 5px 0 5px 0;
+	}
+
+	.type-filter-container,
+	.region-filter-container,
+	.sorting-filter-container {
+		font-size: 14px;
+		margin: 4px 2px 0 0;
+	}
+
+	.selectType-box,
+	.selectRegion-box {
+		width: 110px;
+		font-size: 14px;
+	}
+
+	.selectSorting-box {
+		width: 75px;
+		font-size: 14px;
+	}
+
+	.pagination-btn img {
+		width: 50px;
+		height: 50px;
+	}
+
+	.page-counter {
+		font-size: 16px;
+	}
+
+	.pokedex-grid {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.pokemon-card {
+		height: 85px;
+		min-width: 255px;
+		padding-bottom: 4px;
+	}
+
+	.pokemon-card-img {
+		width: 95px;
+		height: 95px;
+		padding: 0;
+	}
+
+	.card-top {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.card-top h3 {
+		font-size: 20px;
+		font-weight: bold;
+		margin: 0;
+	}
+
+	.pokemon-card-id {
+		font-size: 18px;
+		padding: 0 5px 0 0;
+	}
+
+	.card-bottom {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.card-body {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 4px;
+		flex: 1;
+		text-transform: capitalize;
+	}
+
+	.favorite-heart {
+		font-size: 18px;
+		border-radius: 8px;
+	}
+
+	.modal-top {
+		height: 36px;
+		font-size: 16px;
+	}
+
+	.modal-close-button {
+		font-size: 26px;
+	}
+
+	.modal-left-column {
+		padding: 5px;
+	}
+
+	.modal-type-icons img {
+		width: 70px;
+		height: 70px;
+	}
+
+	.modal-img {
+		padding: 5%;
+	}
+
+	.modal-bottom h1 {
+		font-size: 26px;
+	}
+
+	.modal-right-column div {
+		font-size: 20px;
+	}
+}
+
+@media screen and (max-width: 799px) {
+	.modal {
+		min-width: 100%;
+		min-height: 100%;
+		border-radius: 0;
+	}
+
+	.modal-top {
+		border-radius: 0;
+	}
+}
+
+@media screen and (max-width: 679px) {
+	.modal-top {
+		height: 30px;
+		padding: 2px;
+		font-size: 16px;
+	}
+
+	.modal-close-button {
+		font-size: 24px;
+	}
+
+	.modal-type-icons img {
+		width: 70px;
+		height: 70px;
+	}
+
+	.modal-img {
+		width: 200px;
+		height: 200px;
+	}
+
+	.modal-img img {
+		width: 200px;
+		height: 200px;
+	}
+
+	.weight-and-height {
+		column-gap: 5px;
+	}
+
+	.pokemon-weight {
+		padding: 2px;
+	}
+
+	.pokemon-height {
+		padding: 2px;
+	}
+
+	.modal-bottom h1 {
+		font-size: 26px;
+	}
+
+	.modal-right-column {
+		margin: 10px;
+	}
+
+	.modal-right-column div {
+		font-size: 18px;
+	}
+
+	.container {
+		padding: 5px;
+	}
+
+	.modal-abilities {
+		flex-direction: column;
+		justify-content: flex-start;
+		grid-gap: 20px;
+		width: fit-content;
+	}
+}
+
+@media screen and (max-width: 544px) {
 	nav {
 		height: 90px;
 		display: flex;
@@ -753,7 +1024,7 @@ nav {
 	}
 
 	.selectSorting-box {
-		width: 55px;
+		width: 75px;
 		font-size: 12px;
 	}
 
@@ -770,9 +1041,13 @@ nav {
 		font-size: 14px;
 	}
 
+	.pokedex-grid {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
 	.pokemon-card {
 		height: 85px;
-		width: 285px;
+		min-width: 285px;
 		padding-bottom: 4px;
 	}
 
@@ -821,120 +1096,112 @@ nav {
 		border-radius: 8px;
 	}
 
-	.modal {
-		display: flex;
-		flex-direction: column;
-		position: relative;
-		width: 100%;
-		height: 100%;
-		background-color: #d6d6d6;
-		transition: all 0.3s ease-in-out;
-		border-radius: 0;
-		margin: 0;
-	}
-
 	.modal-top {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		background-color: #ffffff;
-		height: 50px;
-		text-transform: capitalize;
-		padding: 4px;
-		font-size: 10px;
-		border-radius: 0;
+		height: 30px;
+		padding: 0px;
+		font-size: 8px;
 	}
 
 	.modal-pokemon-id {
-		padding-left: 2px;
+		padding: 0 0 0 5px;
 	}
 
 	.modal-close-button {
-		padding-right: 2px;
-		font-size: 20px;
-	}
-
-	.modal-center-container {
-		justify-content: center;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.modal-pokemon-genus {
-		padding: 0 8px 0 8px;
-		margin-bottom: 10px;
-		font-size: 12px;
-	}
-
-	.modal-type-icons {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: space-between;
-		margin-top: 10px;
-	}
-
-	.modal-type-icons img {
-		width: 40px;
-		height: 40px;
-	}
-
-	.modal-img-container {
-		padding: 10px 0 10px 0;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
-	.modal-img {
-		background-color: #ffffff;
-		width: 150px;
-		height: 150px;
-		border-radius: 50%;
-		padding: 1%;
-	}
-
-	.modal-img img {
-		width: 150px;
-		height: 150px;
+		padding: 0 5px 0 0;
+		font-size: 14px;
 	}
 
 	.modal-bottom {
 		display: flex;
 		flex-direction: row;
-		background-color: #ffffff;
-		border-radius: 0;
-		min-height: 100%;
+	}
+
+	.modal-left-column {
+		padding: 5px;
+		margin: 5px;
+		font-size: 12px;
+		justify-content: space-evenly;
+	}
+
+	.modal-pokemon-genus {
+		padding: 1px 4px 1px 4px;
+		margin: 0 0 5px 0;
+		border-radius: 8px;
+		font-weight: 600;
+	}
+
+	.modal-type-icons {
+		margin-top: 5px;
+		column-gap: 10px;
+	}
+
+	.modal-type-icons img {
+		width: 35px;
+		height: 35px;
+	}
+
+	.modal-img {
+		width: 120px;
+		height: 120px;
+		padding: 5%;
+	}
+
+	.modal-img img {
+		width: 120px;
+		height: 120px;
+	}
+
+	.weight-and-height {
+		margin: 5px;
+		column-gap: 5px;
+	}
+
+	.pokemon-weight {
+		padding: 5px;
+		min-width: 50px;
+	}
+
+	.pokemon-height {
+		padding: 5px;
+		min-width: 50px;
 	}
 
 	.modal-bottom h1 {
 		font-size: 18px;
-		padding-bottom: 2px;
-	}
-
-	.modal-bottom div {
-		font-size: 12px;
-		padding-bottom: 0px;
-	}
-
-	.modal-left-column {
-		padding: 4px 8px 0 10px;
-		width: 50%;
+		font-weight: 600;
 	}
 
 	.modal-right-column {
-		padding: 4px 8px 0 10px;
-		width: 50%;
+		margin: 5px;
+	}
+
+	.modal-right-column div {
+		padding-bottom: 2px;
+		font-size: 12px;
+	}
+
+	.container {
+		padding: 5px;
+		margin-bottom: 5px;
 	}
 
 	.modal-abilities {
-		text-transform: capitalize;
+		flex-direction: column;
+		grid-gap: 5px;
 	}
 
-	.modal-flavor-text {
-		margin-top: 10px;
+	.modal-abilities ul {
+		padding-left: 10px;
+	}
+
+	.footer p {
+		margin: 10px;
+	}
+
+	.githubIcon {
+		color: #000000;
+		font-size: 25px;
+		padding: 0 0 0 5px;
 	}
 
 	.footer {
